KSENROLL-11633: incorporated maven best practices into KSAP POMs * use of <dependencyManagement> in top-level POM * generally tighter dependency definitions
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-ap/trunk@64058 0ac02d80-fb3f-11dc-a574-c57244a850eb