@@ -9,40 +9,11 @@
         <artifactId>ks-ap</artifactId>
         <version>0.8.0-FR2-M1-SNAPSHOT</version>
     </parent>
-    <!-- For Restlet dependency
-    <repositories>
-        <repository>
-            <id>maven-restlet</id>
-            <name>Public online Restlet repository</name>
-            <url>http://maven.restlet.org</url>
-        </repository>
-    </repositories>
--->
     <dependencies>
         <dependency>
-            <groupId>org.kuali.student.api</groupId>
-            <artifactId>ks-core-api</artifactId>
-            <version>${ks.api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.api</groupId>
-            <artifactId>ks-common-api</artifactId>
-            <version>${ks.api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.api</groupId>
-            <artifactId>ks-enroll-api</artifactId>
-            <version>${ks.api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.api</groupId>
-            <artifactId>ks-lum-api</artifactId>
-            <version>${ks.api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.api</groupId>
-            <artifactId>ks-ap-api</artifactId>
-            <version>${ks.api.version}</version>
+            <groupId>org.kuali.student.ap</groupId>
+            <artifactId>ks-ap-framework</artifactId>
+            <version>${ks.ap.version}</version>
         </dependency>
         <dependency>
             <groupId>org.kuali.student.core</groupId>
@@ -50,105 +21,27 @@
             <version>${ks.core.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.kuali.student.ap</groupId>
-            <artifactId>ks-ap-framework</artifactId>
-            <version>${ks.ap.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.rice</groupId>
-            <artifactId>rice-krad-app-framework</artifactId>
-            <version>${kuali.rice.version}</version>
-        </dependency>
-        <!-- test dependencies -->
-        <dependency>
-            <groupId>org.kuali.student.core</groupId>
-            <artifactId>ks-common-test</artifactId>
-            <version>${ks.core.version}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-jpa_3.0_spec</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.core</groupId>
-            <artifactId>ks-common-ui</artifactId>
-            <version>${ks.core.version}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.gwt</groupId>
-                    <artifactId>gwt-dev</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.core</groupId>
-            <artifactId>ks-core-impl</artifactId>
-            <version>${ks.core.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.core</groupId>
-            <artifactId>ks-core-ui</artifactId>
-            <version>${ks.core.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.lum</groupId>
-            <artifactId>ks-lum-impl</artifactId>
-            <version>${ks.lum.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.lum</groupId>
-            <artifactId>ks-lum-ui</artifactId>
-            <version>${ks.lum.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.kuali.student.enroll</groupId>
             <artifactId>ks-enroll-impl</artifactId>
             <version>${ks.enroll.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.kuali.student.enroll</groupId>
-            <artifactId>ks-enroll-ui</artifactId>
-            <version>${ks.enroll.version}</version>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.core</groupId>
+            <artifactId>ks-common-test</artifactId>
+            <version>${ks.core.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.kuali.rice</groupId>
-            <artifactId>rice-impl</artifactId>
-            <version>${kuali.rice.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>${oracle.artifactId}</artifactId>
-            <version>${oracle.version}</version>
-            <scope>test</scope>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>antlr</groupId>
-            <artifactId>antlr</artifactId>
+            <artifactId>spring-test</artifactId>
         </dependency>
         <dependency>
             <groupId>org.kuali.student.ap</groupId>
@@ -165,21 +58,7 @@
             <type>test-jar</type>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <!--
-                        Setting forkMode to always. Multiple dao tests using Spring
-                        junit class runner doesn't play nice with each other
-                        -->
-                <configuration>
-                    <forkMode>always</forkMode>
-                    <argLine>-XX:MaxPermSize=128m -Xms256m -Xmx1024m</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
     <profiles>
         <profile>
             <id>ks-hibernate</id>
